--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "devDependencies": {
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.1.2"
   }
 }
