--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "react-moment": "^0.9.6",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   }
 }
