--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://shomi2302.github.io/Youtube-Clone/",
   "name": "youtube",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "react-moment": "^0.9.6",
